[package]
name = "vc-vest"
author = "rsproule <ryan@blokchain.captal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ethers = "2.0.10"
polars = { version = "0.34.2", features = [
    "lazy",
    "temporal",
    "describe",
    "json",
    "parquet",
    "dtype-datetime",
] }
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }
